src/test/ui/associated-consts/assoc-const.stderr
error: associated const equality is incomplete
  --> $DIR/assoc-const.rs:16:15
   |
LL | fn foo<F: Foo<N=3>>() {}
   |               ^^^ cannot yet relate associated const

error: associated const equality is incomplete
  --> $DIR/assoc-const.rs:18:15
   |
LL | fn bar<F: Foo<N={TEST}>>() {}
   |               ^^^^^^^^ cannot yet relate associated const

error: aborting due to 2 previous errors

